# QuScope

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  fixed_counts_to_2d_array.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  wpo_quantum1D.ipynb
.github/workflows/: README.md  publish-pypi.yml  tests.yml  workflow.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  installing.rst  license.rst  notebooks.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: api.doctree  notebooks.doctree
docs/_build/doctrees/api/: quscope.eels_analysis.doctree  quscope.eels_analysis.preprocessing.doctree  quscope.eels_analysis.quantum_processing.doctree  quscope.image_processing.doctree  quscope.image_processing.filtering.doctree  quscope.image_processing.preprocessing.doctree  quscope.image_processing.quantum_encoding.doctree  quscope.image_processing.quantum_segmentation.doctree  quscope.qml.doctree  quscope.qml.image_encoding.doctree
docs/_static/: custom.css
docs/api/: quscope.eels_analysis.preprocessing.rst  quscope.eels_analysis.quantum_processing.rst  quscope.eels_analysis.rst  quscope.image_processing.filtering.rst  quscope.image_processing.preprocessing.rst  quscope.image_processing.quantum_encoding.rst  quscope.image_processing.quantum_segmentation.rst  quscope.image_processing.rst  quscope.qml.image_encoding.rst  quscope.qml.rst
docs/examples/: advanced_examples.rst  basic_examples.rst  index.rst  integration_examples.rst
docs/notebooks/: image_processing.ipynb  qml_image_encoding_example.ipynb  quantum_EELS_Analysis.ipynb  wpo_quantum1D.ipynb
docs/tutorials/: index.rst
notebooks/: complete_quantum_microscopy_examples.ipynb  image_denoising.ipynb  qml_image_encoding_example.ipynb  quantum_EELS_Analysis.ipynb  quantum_edge_detection_placeholder_example.ipynb
notebooks/sean's testing notebooks/: Image Production.ipynb  QuScope Preprocessing 62425.ipynb  development_of_image_denoiser.ipynb  qml stuff going in positive direction_.ipynb  quantum microscopy image slices and analysis.ipynb  testing roberto's original quantum encoding.ipynb
scripts/: build_and_publish.sh  post_release.sh  prepare_release.sh
src/: __init__.py  config.py  exceptions.py
src/quantum/: base.py  microscopy.py
src/quscope/: __init__.py  quantum_backend.py
src/quscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quscope/eels_analysis/: __init__.py  analysis.py  eels_utils.py  preprocessing.py  quantum_processing.py
src/quscope/image_processing/: __init__.py  filtering.py  image_denoising.py  preprocessing.py  quantum_encoding.py  quantum_segmentation.py
src/quscope/qml/: __init__.py  image_encoding.py
src/utils/: validation.py
tests/: test_quantum_microscopy.py
