[metadata]
name = quscope
version = 0.1.0
author = Reis, Roberto and Lam, Sean
author_email = roberto@example.com
description = QuScope - Quantum algorithms for microscopy image processing and EELS analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertoreis/quantum_algo_microscopy
project_urls =
    Documentation = https://quscope.readthedocs.io
    Bug Tracker = https://github.com/robertoreis/quantum_algo_microscopy/issues
    Source Code = https://github.com/robertoreis/quantum_algo_microscopy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    qiskit>=0.45.0
    qiskit-aer>=0.13.0
    numpy>=1.21.0
    pillow>=8.0.0
    scipy>=1.7.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.7.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.3.0
docs =
    sphinx>=7.1.0
    sphinx-rtd-theme>=1.3.0
    myst-parser>=2.0.0
    nbsphinx>=0.9.0
viz =
    matplotlib>=3.5.0
    jupyter>=1.0.0
all =
    matplotlib>=3.5.0
    jupyter>=1.0.0
    pandas>=1.3.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests

[coverage:run]
source = src/quscope
omit = 
    */tests/*
    */test_*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 3
line_length = 88
